--- a/demo-vulkan/CMakeLists.txt
+++ b/demo-vulkan/CMakeLists.txt
@@ -3,11 +3,17 @@ project(VulkanDemo CXX)
 
 find_package(Vulkan REQUIRED)
 find_package(imguidocking REQUIRED)
+# find_package(VulkanHeaders REQUIRED)
 
+# add_executable(${PROJECT_NAME} main.cpp)
+# build_subdir_demos(
+#     SOURCES
+#     main.cpp
+# )
 add_executable(${PROJECT_NAME} main.cpp)
-
 target_link_libraries(
     ${PROJECT_NAME}
     Vulkan::Vulkan
+    vulkan-headers::vulkan-headers
     imguidocking::imguidocking
 )
